cleaned_yaml/golang-app/go-web-app-main/Kubernetes/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: golang-app
  labels: 
    app: golang-app
spec:
  selector:
    app: golang-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
