cleaned_yaml/golang-app/go-web-app-main/Kubernetes/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: golang-app 
spec:
  ingressClassName: nginx
  rules:
  - host: "golang-app.com"
    http:
      paths:
      - pathType: Prefix
        path: "/courses"
        backend:
          service:
            name: golang-app
            port:
              number: 80
